# football-data-extractor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: linting.yml  scrapy-contracts.yml
fbref/fbref/: __init__.py  constants.py  feeds.py  nagviator.py  navigator.py  schemas.py  settings.py
fbref/fbref/cleaners/common/: __init__.py  _clean_age_column.py  _clean_column_names.py  _clean_competition_column.py  _clean_xg_difference_cols.py  _drop_matches_column.py  _remove_row_headers.py  _trim_nation_column.py
fbref/fbref/cleaners/defense/: __init__.py  _defense_rename_cols.py
fbref/fbref/cleaners/gca/: __init__.py  _gca_rename_cols.py
fbref/fbref/cleaners/keepers/: __init__.py  _keepers_adv_rename_cols.py  _keepers_rename_cols.py
fbref/fbref/cleaners/misc/: __init__.py  _misc_rename_cols.py
fbref/fbref/cleaners/passing/: __init__.py  _passing_rename_cols.py  _passing_type_rename_cols.py
fbref/fbref/cleaners/playing_time/: __init__.py  _playing_time_rename_cols.py
fbref/fbref/cleaners/possession/: __init__.py  (+1 more)
fbref/fbref/collectors/: __init__.py  base.py  player_defense.py  player_gca.py  player_keeper.py  player_keeper_adv.py  player_misc.py  player_passing.py  player_passing_type.py  player_playing_time.py  player_possession.py  player_shooting.py  player_standard_stats.py  player_wages.py
fbref/fbref/crawlers/: base.py  player_defense.py
fbref/fbref/schemas/: __init__.py  _player_defense.py  _player_gca.py  _player_keeper.py  _player_keeper_adv.py  _player_misc.py  _player_passing.py  _player_passing_types.py  _player_playing_time.py  _player_possession.py  _player_shooting.py  _player_standard_stats.py  _player_wages.py
fbref/fbref/utils/: logger.py
transfermarkt/: test.py
transfermarkt/transfermarkt/: middlewares.py  pipelines.py  schemas.py  settings.py
transfermarkt/transfermarkt/config/: leagues.py  parser_indexes.py
transfermarkt/transfermarkt/models/: _squad.py
transfermarkt/transfermarkt/parsers/: base.py
transfermarkt/transfermarkt/spiders/: clubs.py  squads.py
(+22 files in other folders)
