[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-data-extractor"
version = "0.1.0"
description = "Project that scrapes football data from multiple web sources."
readme = "README.md"
requires-python = ">=3.12.0"

dependencies = [
    "beautifulsoup4>=4.12.3",
    "gcsfs>=2024.10.0",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.10.3",
    "rich>=13.9.4",
    "scrapy>=2.12.0",
]

[tool.setuptools]
packages = ['fbref.fbref', 'transfermarkt.transfermarkt']

[tool.setuptools.packages.find]
where = ["."]
include = ["fbref.fbref*", "transfermarkt.transfermarkt*"]